apps/workloads/fnpc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fnpc
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
